Ignore insecure tests